# PB_CRL

./: .gitattributes  .gitignore  NOTAS.md  README.md  pyproject.toml  requirements.txt
dashboard/: __init__.py  app.py  data_loader.py  export_html.py
scratch_shield/: generar_resultados_dashboard.py  simulacion_estocastica_con_shield.py  simulacion_historica_con_shield.py  verificacion_historica.py
scratch_stochastic/: diagnostico_residuo_neusa.py  validacion_bloques.py  verificar_entorno_estocastico.py
scratch_vmf/: calcular_vmf.py  calcular_vmf_v2.py  calcular_vmf_v3_validacion.py
src/pbcrl/: __init__.py
src/pbcrl/data_contracts/: __init__.py  captaciones.py  caudal_ecologico.py  curvas.py  embalses.py  schemas.py  ventana.py
src/pbcrl/data_ingest/: __init__.py  roni.py  saucio.py  tomine.py
src/pbcrl/environment/: __init__.py  config.py  entorno.py  fuente_forzantes.py  hidraulica.py  penalizaciones.py
src/pbcrl/hydrology/: __init__.py  balance.py
src/pbcrl/shield/: README.md  __init__.py  proyeccion.py  restricciones.py
src/pbcrl/stochastic/: README.md  __init__.py  analogos.py  entrenamiento.py  modelo.py
src/pbcrl/synthetic/: __init__.py  generador.py
tests/: test_balance_hidrico.py  test_caudal_ecologico.py  test_contrato.py  test_curvas.py  test_entorno.py  test_fuente_forzantes.py  test_roni_loader.py  test_saucio_loader.py  test_shield.py  test_sintetico.py  test_stochastic.py  test_tomine_loader.py
